@@ -11,6 +11,8 @@ Change log 1.4 (under development)
 * Fixed so that Whitebox#getInternalState(..) now supports passing in super types as field-type critiera (issue 210).
 * Fixed so that Whitebox#getInternalState(..) and Whitebox#setInternalState(..) doesn't cause NPE when too many fields matched the criteria (issue 211).
 * Basic support for TestNG (5.11) implemented.
+* Fixed so that Whitebox#invokeMethod now works for overridden methods.
+* Implemented findResource in classloader (issue 143), this means that you should be able to locate resources in classpath.
 
 Change log 1.3.1 (released 2009-10-28)
 --------------------------------------
